force-app/main/default/objects/Funding_Disbursement__c/Funding_Disbursement__c.object-meta.xml
<CustomObject>
    <label>Funding Disbursement</label>
    <nameField>
        <displayFormat>FD-{0}</displayFormat>
        <label>Funding Disbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Disbursements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>