force-app/main/default/objects/Funding_Disbursement__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>Funding_Award__c</referenceTo>
    <relationshipLabel>Funding Disbursements</relationshipLabel>
    <relationshipName>Funding_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>