force-app/main/default/objects/Funding_Disbursement__c/fields/RemainingFundsInterestReturned__c.field-meta.xml
<CustomField>
    <fullName>RemainingFundsInterestReturned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remaining Funds &amp; Interest Returned</label>
    <type>Checkbox</type>
</CustomField>